maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: not found: value getWordlHeigh
  for(i <- 0 to getWordlHeigh() - 1) {
                ^