maze.shortestpath.ShortestPathMaze.scala.code
def getBaggleCoords():Array[Int] = {
  for(i <- 0 to getWordlHeigh() - 1) {
    
  }
  return Array(5, 2);
}

override def run() {
    var baggleCoords = getBaggleCoords();
}